--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
       href="https://api.fontshare.com/v2/css?f[]=recia@700,400&f[]=zina@400&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jacquard+24&display=swap"
+      rel="stylesheet"
+    />
     <title>Warhammer Haven</title>
   </head>
   <body>
